--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
 
     <h1>Hello world!</h1>
-    <<<<<<< HEAD <div><img src="darknet picture.jpg" alt="Hello World from Space" style="width:100%;max-width:960px">
+    <<<<<<< HEAD <div><img src="darknet picture.jpg" alt="Hello World from Space" style="width:200px;max-width:640px">
         </div>
         =======
         <div>
-            <img src="Darknet.jpg" alt="Hello World from Space" style="width:100%;max-width:960px">
+            <img src="Darknet.jpg" alt="Hello World from Space" style="width:200px;max-width:640px">
         </div>
         >>>>>>> hello-world-images
         <p>This is the first file in my new Git Repo.</p>
-        <p>A new line in our file!</p>
+        <p>This line is here to show how merging works.</p>
         <div><img src="darknet picture.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
 </body>
