--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-
+<h2>Learning Git & Hub<h2>
+    
     <h1>Hello world!</h1>
     <<<<<<< HEAD <div><img src="darknet picture.jpg" alt="Hello World from Space" style="width:200px;max-width:640px">
         </div>
